src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoATrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoA Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TemplateQuestionPrefix__c</fullName>
        <description>The template question section Pre-fix</description>
        <formula>TemplateQuestion__r.SectionPrefix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Question Pre-fix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateQuestion__c</fullName>
        <label>Template Question</label>
        <referenceTo>TemplateQuestion__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>Answer-{0000000000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>